changed text color to fix contrast error

--- a/final/css/medium.css
+++ b/final/css/medium.css
@@ -26,7 +26,7 @@
     }
 
     #home-main-large button {
-        background-color: #83C5BE;
+        background-color: #397282;
         color: white;
         border-radius: 10px;
         font-size: 3vw;
