--- a/final/css/small.css
+++ b/final/css/small.css
@@ -14,7 +14,7 @@ h1, h2, h3, nav {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: #83C5BE;
+    color: #397282;
     text-shadow: 0 0 1px white;
 }
 
@@ -104,7 +104,7 @@ main h2 {
 }
 
 main a {
-    color: #83C5BE;
+    color: #397282;
 }
 
 #home-main-large {
@@ -121,7 +121,7 @@ main a {
     width: 50vw;
     height: 8vw;
     font-size: 3vw;
-    background-color: #83C5BE;
+    background-color: #397282;
     color: white;
     border-radius: 10px;
 }
@@ -149,12 +149,12 @@ footer {
 
 footer a {
     text-decoration: none;
-    color: #83C5BE;
+    color: #397282;
     /* text-shadow: 0 0 2px lightblue; */
 }
 
 footer a:hover {
-    background-color: #83C5BE;
+    background-color: #397282;
     color: white;
 }
 
@@ -238,7 +238,7 @@ form select, textarea {
 #resbtn {
     margin: 10px;
     background-color: white;
-    border: 2px solid #83C5BE;
+    border: 2px solid #397282;
     border-radius: 5px;
 }
 
@@ -274,7 +274,7 @@ form select, textarea {
 
 #weddingInfo:hover, #suiteInfo:hover {
     background-color: white;
-    border: 1px solid #83C5BE;
+    border: 1px solid #397282;
 }
 
 /*---------Receptions-------*/
@@ -305,6 +305,6 @@ form select, textarea {
     padding: 10px;
     margin: 10px;
     background-color: white;
-    border: 2px solid #83C5BE;
+    border: 2px solid #397282;
     border-radius: 10px;
 }
